--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.2",
+    "axios": "^1.11.0",
     "element-plus": "^2.11.1",
     "pinia": "^3.0.3",
     "vue": "^3.5.18",
