--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
+    "@vueuse/core": "^13.8.0",
     "axios": "^1.11.0",
     "element-plus": "^2.11.1",
     "pinia": "^3.0.3",
